feat: implement Material and Building Information Module
